# BoundaryIntegralLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.kdev4/: BoundaryIntegralLib.kdev4
include/: BoundaryOperators.h  BoundaryOperators.hpp  BoundarySeparator.hpp  SpectraErrorOp.hpp  SpectraInterface.hpp  StokesDGS.hpp  StokesMG.hpp  StokesOperator.hpp  dgs.hpp  incidence.hpp
release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
release/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: BoundaryOperators.cpp  BoundarySeparator.cpp  CMakeLists.txt  SpectraErrorOp.cpp  SpectraInterface.cpp  StokesDGS.cpp  StokesMG.cpp  StokesOperator.cpp  incidence.cpp
tests/: BoundaryOperatorsTests.cpp  BoundarySeparatorTest.cpp  CMakeLists.txt  FEMConvergence.cpp  IncidenceTest.cpp  MGConvergence.cpp  NitscheCVGTest.cpp  SpectraOpTest.cpp  StokesDGSTest.cpp  StokesMGTest.cpp  StokesOperatorTest.cpp  cvg.py  temp_result.csv
tests/mesh/: LidDrivenCavity3D.msh
tests/meshes/: ball.msh  ball_hole.msh  corner.msh  corner_structured.msh  cube.msh  cylinder.msh  tetra.msh
